--- a/emt4j-assembly/pom.xml
+++ b/emt4j-assembly/pom.xml
@@ -23,12 +23,11 @@
     <parent>
         <artifactId>emt4j-parent</artifactId>
         <groupId>org.eclipse.emt4j</groupId>
-        <version>0.3</version>
+        <version>${emt4j.version}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <emt4j.version>0.3</emt4j.version>
         <build.agent.dir>${project.build.directory}/agent</build.agent.dir>
         <build.analysis.dir>${project.build.directory}/analysis</build.analysis.dir>
         <build.maven.plugin.dir>${project.build.directory}/maven-plugin</build.maven.plugin.dir>
@@ -63,17 +62,17 @@
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-test-common</artifactId>
-            <version>0.3</version>
+            <version>${emt4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-test-jdk8</artifactId>
-            <version>0.3</version>
+            <version>${emt4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-test-jdk11</artifactId>
-            <version>0.3</version>
+            <version>${emt4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
