--- a/emt4j-agent/emt4j-agent-jdk8/pom.xml
+++ b/emt4j-agent/emt4j-agent-jdk8/pom.xml
@@ -23,12 +23,12 @@
     <parent>
         <artifactId>emt4j-agent</artifactId>
         <groupId>org.eclipse.emt4j</groupId>
-        <version>0.3</version>
+        <version>${emt4j.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>emt4j-agent-jdk8</artifactId>
-    <version>0.3</version>
+    <version>${emt4j.version}</version>
     <groupId>org.eclipse.emt4j</groupId>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-agent-common</artifactId>
-            <version>0.3</version>
+            <version>${emt4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
