--- a/emt4j-test/emt4j-test-common/pom.xml
+++ b/emt4j-test/emt4j-test-common/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <artifactId>emt4j-test</artifactId>
         <groupId>org.eclipse.emt4j</groupId>
-        <version>0.3</version>
+        <version>${emt4j.version}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.eclipse.emt4j</groupId>
     <artifactId>emt4j-test-common</artifactId>
-    <version>0.3</version>
+    <version>${emt4j.version}</version>
 
     <dependencies>
         <dependency>
