--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -29,6 +29,8 @@ jobs:
           java-version: |
             8
             11
+      - name: print toolchains
+        run: cat /home/runner/.m2/settings.xml
       - name: build EMT4J
         run: |
           mvn clean package -Prelease
