--- a/emt4j-common/pom.xml
+++ b/emt4j-common/pom.xml
@@ -22,13 +22,12 @@
     <parent>
         <groupId>org.eclipse.emt4j</groupId>
         <artifactId>emt4j-parent</artifactId>
-        <version>${emt4j.version}</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.eclipse.emt4j</groupId>
     <artifactId>emt4j-common</artifactId>
-    <version>${emt4j.version}</version>
     <name>emt4j-common</name>
     <url>https://projects.eclipse.org/projects/adoptium.emt4j</url>
     <packaging>jar</packaging>
