--- a/emt4j-plugin/pom.xml
+++ b/emt4j-plugin/pom.xml
@@ -22,13 +22,12 @@
     <parent>
         <groupId>org.eclipse.emt4j</groupId>
         <artifactId>emt4j-parent</artifactId>
-        <version>${emt4j.version}</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.eclipse.emt4j</groupId>
     <artifactId>emt4j-maven-plugin</artifactId>
-    <version>${emt4j.version}</version>
     <url>https://projects.eclipse.org/projects/adoptium.emt4j</url>
     <packaging>maven-plugin</packaging>
     <dependencies>
