--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
                 <executions>
                     <execution>
                         <id>flatten</id>
-                        <phase>process-resources</phase>
+                        <phase>pre-integration-test</phase>
                         <goals>
                             <goal>flatten</goal>
                         </goals>
