ci: set javadoc's failOnError to false temporarily

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <failOnError>false</failOnError>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
