--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <revision>0.7-SNAPSHOT</revision>
     </properties>
     <dependencyManagement>
@@ -195,22 +196,21 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!--            <plugin>-->
-                    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-                    <!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-                    <!--                <version>2.9.1</version>-->
-                    <!--                <executions>-->
-                    <!--                    <execution>-->
-                    <!--                        <id>attach-javadocs</id>-->
-                    <!--                        <goals>-->
-                    <!--                            <goal>jar</goal>-->
-                    <!--                        </goals>-->
-                    <!--                    </execution>-->
-                    <!--                </executions>-->
-                    <!--                <configuration>-->
-                    <!--                    <failOnError>false</failOnError>-->
-                    <!--                </configuration>-->
-                    <!--            </plugin>-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.4.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
