chore: set javadoc's failOnError to false

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,7 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <failOnError>false</failOnError>
                         </configuration>
                     </plugin>
                     <plugin>
