--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <revision>0.7-SNAPSHOT</revision>
+        <revision>0.7.0</revision>
     </properties>
     <dependencyManagement>
         <dependencies>
