--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,27 @@
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- modules -->
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-analysis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-agent</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-agent-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.eclipse.emt4j</groupId>
                 <artifactId>emt4j-agent-jdk8</artifactId>
@@ -70,19 +91,36 @@
             </dependency>
             <dependency>
                 <groupId>org.eclipse.emt4j</groupId>
-                <artifactId>emt4j-analysis</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.emt4j</groupId>
-                <artifactId>emt4j-common</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.emt4j</groupId>
                 <artifactId>emt4j-maven-plugin</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-test</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-test-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-test-jdk8</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-test-jdk11</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.emt4j</groupId>
+                <artifactId>emt4j-assembly</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <!-- other dependencies -->
             <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
