--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright (c) 2022 Contributors to the Eclipse Foundation
+    Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
 
     See the NOTICE file(s) distributed with this work for additional
     information regarding copyright ownership.
@@ -242,6 +242,7 @@
                 <version>4.7.2.1</version>
                 <configuration>
                     <threshold>High</threshold>
+                    <excludeFilterFile>spotbugs-filter.xml</excludeFilterFile>
                 </configuration>
                 <dependencies>
                     <dependency>
