--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <revision>0.8.0</revision>
+        <revision>0.9-SNAPSHOT</revision>
     </properties>
     <dependencyManagement>
         <dependencies>
