fix: should consider desc for remove methods rule

--- a/emt4j-common/src/main/resources/default/rule/8to11/data/remove_methods.cfg
+++ b/emt4j-common/src/main/resources/default/rule/8to11/data/remove_methods.cfg
@@ -14,7 +14,7 @@ java/lang/Runtime.runFinalizersOnExit(Z)V
 java/lang/SecurityManager.checkAwtEventQueueAccess()V
 java/lang/SecurityManager.checkMemberAccess(Ljava/lang/Class;I)V
 java/lang/SecurityManager.checkSystemClipboardAccess()V
-java/lang/SecurityManager.checkTopLevelWindow.(Ljava/lang/Object;)Z
+java/lang/SecurityManager.checkTopLevelWindow(Ljava/lang/Object;)Z
 java/lang/System.runFinalizersOnExit(Z)V
 java/lang/Thread.destroy()V
 java/lang/Thread.stop(Ljava/lang/Throwable;)V
