feat: add check rules for jdk11-17 migration

--- a/emt4j-common/src/main/resources/default/rule/11to17/data/remove_classes.cfg
+++ b/emt4j-common/src/main/resources/default/rule/11to17/data/remove_classes.cfg
@@ -1,6 +1,8 @@
-java.applet.Applet
-java.applet.AppletStub
-java.applet.AppletContext
-java.applet.AudioClip
-javax.swing.JApplet
-java.beans.AppletInitializer
+java.security.acl.Acl
+java.security.acl.AclEntry
+java.security.acl.Group
+java.security.acl.Owner
+java.security.acl.Permission
+java.util.jar.Pack200.Packer
+java.util.jar.Pack200.Unpacker
+java.util.jar.Pack200
