rule jvm option and add jdk17 test module

--- a/emt4j-assembly/pom.xml
+++ b/emt4j-assembly/pom.xml
@@ -38,7 +38,7 @@
         <build.maven.plugin.dir>${project.build.directory}/maven-plugin</build.maven.plugin.dir>
         <build.test.common>${project.build.directory}/test/common</build.test.common>
         <build.test.testcases>${project.build.directory}/test/testcase</build.test.testcases>
-        <testcases.artifactId>emt4j-test-jdk8,emt4j-test-jdk11</testcases.artifactId>
+        <testcases.artifactId>emt4j-test-jdk8,emt4j-test-jdk11,emt4j-test-jdk17</testcases.artifactId>
         <agent.artifactId>emt4j-agent-jdk8,emt4j-agent-jdk11</agent.artifactId>
     </properties>
 
@@ -74,6 +74,10 @@
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-test-jdk11</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emt4j</groupId>
+            <artifactId>emt4j-test-jdk17</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
