--- a/emt4j-agent/pom.xml
+++ b/emt4j-agent/pom.xml
@@ -30,6 +30,7 @@
     <modules>
         <module>emt4j-agent-jdk8</module>
         <module>emt4j-agent-jdk11</module>
+        <module>emt4j-agent-jdk17</module>
         <module>emt4j-agent-common</module>
     </modules>
     <description>javaagent of emt4j</description>
