--- a/emt4j-assembly/pom.xml
+++ b/emt4j-assembly/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright (c) 2022 Contributors to the Eclipse Foundation
+    Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
 
     See the NOTICE file(s) distributed with this work for additional
     information regarding copyright ownership.
@@ -38,8 +38,8 @@
         <build.maven.plugin.dir>${project.build.directory}/maven-plugin</build.maven.plugin.dir>
         <build.test.common>${project.build.directory}/test/common</build.test.common>
         <build.test.testcases>${project.build.directory}/test/testcase</build.test.testcases>
-        <testcases.artifactId>emt4j-test-jdk8,emt4j-test-jdk11</testcases.artifactId>
-        <agent.artifactId>emt4j-agent-jdk8,emt4j-agent-jdk11</agent.artifactId>
+        <testcases.artifactId>emt4j-test-jdk8,emt4j-test-jdk11,emt4j-test-jdk17</testcases.artifactId>
+        <agent.artifactId>emt4j-agent-jdk8,emt4j-agent-jdk11,emt4j-agent-jdk17</agent.artifactId>
     </properties>
 
     <dependencies>
@@ -50,6 +50,10 @@
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-agent-jdk11</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emt4j</groupId>
+            <artifactId>emt4j-agent-jdk17</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
@@ -74,6 +78,10 @@
         <dependency>
             <groupId>org.eclipse.emt4j</groupId>
             <artifactId>emt4j-test-jdk11</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emt4j</groupId>
+            <artifactId>emt4j-test-jdk17</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
